# HILSuperposition-2017

./: Porting Validation.ipynb  pylock.toml  pyproject.toml
artifacts/: phase_shifts_d-fo-py2.7.18-seed49.csv  phase_shifts_d-so-py2.7.18-seed49.csv  phase_shifts_r-fo-py2.7.18-seed49.csv  phase_shifts_r-so-py2.7.18-seed49.csv
experiment/: analysis.py  experiment.py  globals.py  runner.py  util.py  visualization.py
experiment/data/test/: 20260616-181524_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-181524_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-181543_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-181543_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-181558_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.csv  20260616-181558_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.npz  20260616-181712_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-181712_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-181715_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.csv  20260616-181715_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.npz  20260616-181838_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-181838_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-181924_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-181924_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-181926_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.csv  20260616-181926_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.npz  20260616-182213_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-182213_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-182215_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.csv  20260616-182215_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.npz  20260616-182317_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-182317_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-182320_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.csv  20260616-182320_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.npz  20260616-182438_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-182438_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-182440_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.csv  20260616-182440_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.npz  20260616-182500_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-182500_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-182503_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.csv  20260616-182503_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.npz  20260616-182612_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.csv  20260616-182612_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst1.npz  20260616-182615_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.csv  20260616-182615_su17v3_fo_r-sos+E_d-sos+O_s49_p0a0_+1_rst2.npz  (+39 more)
experiment/lib/: generate_subject_id.py  print_serial.py  slider.py
experiment/protocols/: globals.py  references.py  spie1.py  spie2.py  su17.py  su17v3.py  su17v3_.py
(+1 files in other folders)
